# rust-language-tags

./: .travis.yml  Cargo.toml  README.md  script.py
.github/workflows/: build.yml  ci.yml
scripts/: update_from_iana_subtag_registery.py
src/: iana_registry.rs  language.rs  lib.rs  serde.rs
src/data/: extlang.rs  language.rs  region.rs  script.rs  variant.rs
src/testdata/: extlang.rs  language.rs  mod.rs  region.rs  script.rs  variant.rs
tests/: tests.rs
