[package]
name = "language-tags"
version = "0.3.0"
authors = ["Pyfisch <pyfisch@gmail.com>"]
edition = "2018"

description = "Language tags for Rust"
license = "MIT"
repository = "https://github.com/pyfisch/rust-language-tags"
keywords = ["language", "internationalization", "translation", "http", "html"]

[badges]
travis-ci = { repository = "pyfisch/rust-language-tags" }

[dev-dependencies]
bencher = "0.1"

[[bench]]
name = "language_tag"
harness = false
