[package]
name = "language-tags"
version = "0.3.2"
authors = [
    "Pyfisch <pyfisch@gmail.com>",
    "Tpt <thomas@pellissier-tanon.fr>"
]
edition = "2018"

description = "Language tags for Rust"
license = "MIT/Apache-2.0"
repository = "https://github.com/pyfisch/rust-language-tags"
keywords = ["language", "i18n", "http", "html"]
categories = ["parser-implementations"]

[badges]
travis-ci = { repository = "pyfisch/rust-language-tags" }

[dependencies]
serde = { version = "1.0", optional = true }

[dev-dependencies]
bencher = "0.1"
serde_json = "1.0"

[[bench]]
name = "language_tag"
harness = false
